<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_choix_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txt_choix_image" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/image_1"
        android:src="@drawable/galaxie1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="104dp"
        android:contentDescription="@string/image_2"
        android:src="@drawable/galaxie2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_3"
        android:src="@drawable/galaxie3" />

</LinearLayout>
